# cocoindex

./: .env.lib_debug  .gitignore  .gitleaks.toml  .lycheeignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API_UPGRADE_SPEC.md  API_UPGRADE_TASK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  KAFKA_PORT_PLAN.md  OPEN_SOURCE_NOTICES.md  README.md  RUST_PYTHON_SDK_PARITY_REVIEW.md  RUST_SDK_REVIEW_FINDINGS.md  THIRD_PARTY_NOTICES.html  about.hbs  about.toml  check_implementation.sh  context7.json  deepdocs.yml  opencode.json  pyproject.toml  requirements.txt  ruff.toml  simple_test.py  test_flow.py
.agents/skills/: cocoindex  cocoindex-diagrams  target-connector
.cargo/: config.toml
.claude/: .gitignore  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: docs-build-check.sh  docs-build-run.sh  py-typecheck-flag.sh  py-typecheck-run.sh
.claude/skills/: upgrade-examples
.cursor/rules/: surrealdb-rust-sdk.mdc
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
.github/scripts/: update_version.py  update_version.sh
.github/workflows/: CI.yml  _doc_release.yml  _docs_release.yml  _test.yml  docs.yml  docs_release.yml  docs_test.yml  e2e_type_check.yml  fast_check.yml  format.yml  links.yml  prek_autoupdate.yml  release.yml
.pre-commit-scripts/: mypy-check.sh
benchmarks/entity_resolution/: .env.example  .gitignore  README.md  benchmark.py  pyproject.toml
benchmarks/file_summarization/: .gitignore  README.md  run.sh
benchmarks/state_store/: README.md  main.py  pyproject.toml  runner.py
dev/: README.md  check_sdk_no_pyo3.sh  generate_cli_docs.py  mypy_check_examples.ps1  neo4j.yaml  postgres.yaml  run_cargo_test.sh  run_cargo_test_rust_externs.sh  run_maturin_develop.sh  test_lmdb_auto_resize.sh  update_rust_extern_locks.sh
dev/agent-checks/: docs-build-run.sh  py-typecheck-run.sh
docs/: README.md  astro.config.mjs  docusaurus.config.ts  node_modules  package-lock.json  package.json  sidebars.ts
docs-astro/: .gitignore  astro.config.mjs
docs-astro/scripts/: remark-admonitions.mjs
examples/: AGENTS.md  README.md  _image_search_shared.py  meeting_notes_graph_common.py
examples/amazon_s3_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/audio_to_text/: .env  .env.example  README.md  main.py  pyproject.toml
examples/azure_blob_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/bigquery_target/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/code_embedding_lancedb/: .env.example  README.md  main.py  pyproject.toml
examples/conversation_to_knowledge/: .env.example  README.md  design.md  pyproject.toml  spec.md
examples/conversation_to_knowledge/conv_knowledge/: app.py  extract.py  fetch.py  models.py  resolve.py
examples/conversation_to_knowledge/input/: sample.txt
examples/custom_output_files/: .env  .gitignore  README.md  main.py  pyproject.toml  run_and_capture.py
examples/custom_output_files/data/: bizarre_animals.md
examples/docs_to_knowledge_graph/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/docs_to_knowledge_graph/markdown_files/: incremental_processing.md  knowledge_graph.md  sources_and_targets.md
examples/entire_session_search/: .env  .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml
examples/face_recognition/: .env.example  README.md  main.py  pyproject.toml
examples/gdrive_text_embedding/: .env  .env.example  README.md  main.py  pyproject.toml
examples/hn_trending_topics/: .env.example  README.md  main.py  models.py  pyproject.toml
examples/image_search/: .env  .env.example  README.md  api.py  colpali_main.py  main.py  pipeline.py  pyproject.toml  requirements.txt
examples/image_search/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/image_search/frontend/src/: App.jsx  style.css
examples/image_search_colpali/: .env.example  README.md  api.py  main.py  pipeline.py  pyproject.toml
examples/image_search_colpali/frontend/: package-lock.json
examples/image_search_colpali/frontend/src/: App.jsx
examples/manuals_llm_extraction/: .env.example  README.md  main.py  pyproject.toml
examples/meeting_notes_graph/: .env.example  README.md  main.py  pyproject.toml
examples/meeting_notes_graph_neo4j/: .env.example  README.md  main.py  pyproject.toml
examples/meeting_notes_graph_neo4j/sample_notes/: weekly-syncs.md
examples/multi_codebase_summarization/: .env.example  README.md  main.py  models.py  pyproject.toml
examples/multi_format_indexing/: .env.example  README.md  main.py  pyproject.toml
examples/oci_object_storage_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/paper_metadata/: .env.example  README.md  main.py  models.py  pyproject.toml
examples/patient_intake_extraction_baml/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/patient_intake_extraction_baml/baml_src/: generators.baml  patient.baml
examples/patient_intake_extraction_dspy/: .env  .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml
examples/pdf_embedding/: .env  .env.example  README.md  main.py  pyproject.toml
examples/pdf_to_markdown/: README.md  main.py  pyproject.toml
examples/postgres_embedding/: .env  .env.example  README.md  main.py  prepare_source_data.sql  pyproject.toml  setup_test_database.py
examples/postgres_source/: .env  .env.example  README.md  main.py  prepare_source_data.sql  pyproject.toml
examples/product_recommendation/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/product_recommendation/products/: p1.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  p8.json  p9.json
examples/sec_edgar_analytics/: .env.example  .gitignore  README.md  docker-compose.yml  download.py  functions.py  main.py  pyproject.toml  search.py  tutorial.ipynb
src/: lib.rs  lib_context.rs  prelude.rs  server.rs  settings.rs
tests/: test__target.py  test_embedder.py
(+1622 files in other folders)
