[project]
name = "azure-blob-embedding-v1"
version = "0.1.0"
description = "CocoIndex v1 example: embed Azure Blob Storage text files into Postgres/pgvector."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[azure_blob,postgres,sentence_transformers]>=1.0.7",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = []
