[project]
name = "code-embedding-lancedb-v1"
version = "0.1.0"
description = "CocoIndex v1 example: embed code files and store in LanceDB."
requires-python = ">=3.11"
dependencies = ["cocoindex[sentence_transformers,lancedb]>=1.0.0a5"]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
