[project]
name = "conversation-to-knowledge"
version = "0.1.0"
description = "CocoIndex example: convert podcast sessions to a knowledge graph in SurrealDB."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[surrealdb,sentence_transformers]>=1.0.0a35",
    "yt-dlp",
    "assemblyai",
    "instructor",
    "litellm",
    "faiss-cpu",
    "numpy",
    "pydantic",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = ["conv_knowledge"]
