[project]
name = "custom-output-files"
version = "0.1.0"
description = "Simple example for cocoindex: build embedding index based on local text files."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.1.67",
    "markdown",
    "markdown-it-py[linkify,plugins]",
]

[tool.setuptools]
packages = []
