[project]
name = "entire-session-search"
version = "0.1.0"
description = "Semantic search over AI coding sessions captured by Entire, powered by CocoIndex."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[postgres,sentence_transformers]>=1.0.0a10",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
