[project]
name = "face-recognition"
version = "0.1.0"
description = "CocoIndex example: detect faces in images, embed each, and index them in Qdrant."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[qdrant]>=1.0.7",
    "face-recognition>=1.3.0",
    "numpy",
    "pillow>=10.0.0",
]

[tool.setuptools]
packages = []
