[project]
name = "gdrive-text-embedding-v1"
version = "0.1.0"
description = "CocoIndex v1 example: embed Google Drive text files into Postgres/pgvector."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[postgres,sentence_transformers,google_drive]>=1.0.0a21",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
