[project]
name = "hn-trending-topics-v1"
version = "0.1.0"
description = "Batch pipeline to scrape HackerNews and extract trending topics using LLM."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
]

[tool.uv]
prerelease = "allow"

[tool.setuptools]
packages = []
