[project]
name = "image-search-v1"
version = "0.1.0"
description = "CocoIndex v1 example: image search with CLIP embeddings stored in Qdrant."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[qdrant]>=1.0.0a21",
    "fastapi>=0.100.0",
    "torch>=2.0.0",
    "transformers>=4.29.0",
    "pillow>=10.0.0",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.3",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
