[project]
name = "image-search-colpali"
version = "0.1.0"
description = "ColPali-based image search example for cocoindex."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.1.67",
    "python-dotenv>=1.0.1",
    "fastapi>=0.100.0",
    "torch>=2.0.0",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.3",
    "colpali-engine>=0.1.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
packages = []
