[project]
name = "multi-codebase-summarization-v1"
version = "0.1.0"
description = "Analyze multiple Python codebases and generate markdown documentation using LLM."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=1.0.0a5",
    "instructor>=1.4.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
