[project]
name = "multi-format-indexing"
version = "0.1.0"
description = "CocoIndex example: index PDFs and images together with ColPali multi-vector embeddings in Qdrant."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[colpali,qdrant]>=1.0.7",
    "transformers>=4.45.0,<5",
    "torch>=2.0.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "qdrant-client>=1.14.2",
]

[tool.setuptools]
packages = []
