[project]
name = "paper-metadata-v1"
version = "0.1.0"
description = "CocoIndex v1 example: extract paper metadata and embeddings from PDFs."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[postgres,sentence_transformers]>=1.0.0a9",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
    "pypdf>=5.7.0",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.1",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
