[project]
name = "patient-intake-extraction-baml"
version = "0.1.0"
description = "Extract structured information from patient intake forms using BAML (v1)."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=1.0.0a1",
    "python-dotenv>=1.0.1",
    "baml-py==0.213.0",
    "pydantic>=2.12.5",
]

[tool.uv]
prerelease = "allow"

[tool.setuptools]
packages = []
