[project]
name = "patient-intake-extraction-dspy-v1"
version = "0.1.0"
description = "Extract structured information from patient intake forms using DSPy (v1)."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=1.0.0a1",
    "dspy-ai>=3.0.4",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.0.1",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
