[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postgres-embedding"
version = "0.1.0"
description = "PostgreSQL Source Embedding Example using CocoIndex"
authors = [
    {name = "CocoIndex Team", email = "support@cocoindex.io"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "cocoindex>=0.1.0",
    "python-dotenv>=1.0.0",
    "psycopg[pool]>=3.1.0",
    "pgvector>=0.2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/cocoindex-io/cocoindex"
Documentation = "https://cocoindex.io/docs"
Repository = "https://github.com/cocoindex-io/cocoindex"
"Bug Tracker" = "https://github.com/cocoindex-io/cocoindex/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
