[project]
name = "postgres-source-v1"
version = "0.1.0"
description = "CocoIndex v1 example: read from PostgreSQL source and write embeddings back to Postgres."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[postgres,sentence_transformers]>=1.0.0a9",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
]

[tool.uv]
prerelease = "explicit"

[tool.setuptools]
packages = []
