[project]
name = "product-recommendation"
version = "0.1.0"
description = "CocoIndex example: LLM-extract product taxonomies into a Neo4j recommendation graph."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[neo4j]>=1.0.7",
    "instructor>=1.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]

[tool.setuptools]
packages = []
