[project]
name = "sec-edgar-analytics"
version = "0.1.0"
description = "SEC EDGAR financial document analytics with CocoIndex + Apache Doris"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.3.29",
    # Doris connector
    "aiohttp>=3.9.0",
    "aiomysql>=0.2.0",
    # Embeddings
    "sentence-transformers>=2.2.0",
    # PDF processing
    "docling>=2.0.0",
    # LLM summary (optional)
    "anthropic>=0.18.0",
    # Data handling
    "httpx>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
pdf = [
    "docling>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
